--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.1.0",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.5.0",
@@ -26,6 +27,7 @@
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.15.1",
     "multer": "^1.4.5-lts.1",
