--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "razorpay": "^2.9.6",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "repository": {
     "type": "git",
